# FilaViewer

./: CMakeLists.txt  Directory.Build.props  FilaMat.sln  FilaViewer.sln  FilaViewer.slnx  GenerateClang.rsp  gen.txt
CCViewer/: CMakeLists.txt  FilaView.cpp  FilaView.h  MainWindow.cpp  MainWindow.h  WindowBar.cpp  main.cpp
CSViewer/: CSViewer.csproj  Program.cs  ViewLocator.cs  app.manifest  gen.txt
CSViewer/FilaView/: FilaView-symbols.cpp  FilaView.dll.cs  IView.cs  IWin.cs  LayoutOperator.cs  NativeAnnotationAttribute.cs  NativeInheritanceAttribute.cs  NativeTypeNameAttribute.cs  SetsLastSystemErrorAttribute.cs  Std.cs  VtblIndexAttribute.cs
CSViewer/Properties/: launchSettings.json
CSViewer/ViewModels/: ModelListViewModel.cs  PropertyViewModel.cs
CSViewer/Views/: MainWindow.axaml.cs  NativeEmbedView.axaml.cs  PropertyView.axaml  PropertyView.axaml.cs
FilaMat/: App.axaml  App.axaml.cs  CMakeLists.txt  FilaMat.csproj  MainWindow.axaml.cs  Program.cs  app.manifest
FilaMat/ViewModels/: MainWindowViewModel.cs
FilaMat/Views/: MainWindow.axaml  MainWindow.axaml.cs  MatPanel.axaml  MatPanel.axaml.cs  NativeEmbedView.axaml  NativeEmbedView.axaml.cs  NativeEmbedView.xaml  NativeEmbedView.xaml.cs
FilaMat/Views/TWin/: FilaView.dll.cs  NativeTypeNameAttribute.cs  TView.cs  TWin.cs
FilaView/: AssemblyInfo.cpp  CMakeLists.txt  FilaView.cpp  FilaView.h  FilaView.vcxproj  FilaView.vcxproj.filters  FilaViewExport.h  IView.h  IWin.h  TDef.h  TOperator.cpp  TOperator.h  TScene.cpp  TScene.h  TView.cpp  TView.h  TWin.cpp  TWin.h  tmath.h  tvec.h
FilaView/imgui/: ImGuiExtensions.cpp  ImGuiHelper.cpp  ImGuiHelper.h  imgui.cpp
FilaView/intern/: FTScene.cpp  FTScene.h  FTView.cpp  FTView.h  FTWin.cpp  FTWin.h  IWin.cpp  ManipOperator.cpp  ManipOperator.h  MeshAssimp.cpp  MeshAssimp.h  PCCDispatch.cpp  PCCDispatch.h  RD_Geometry.cpp  RD_Geometry.h  RD_Gltf.cpp  RD_Gltf.h  RD_Model.cpp  RD_Model.h
FilaView/intern/mesh/: Cube.cpp  Cube.h  IcoSphere.cpp  RDShape.cpp  RDShape.h  Sphere.cpp  Sphere.h
FilaView/materials/: DefaultMat.mat  PCMat.mat  basic.mat  default.mat  legacy.mat
FilaView/mesh/: Cube.cpp  Cube.h  Sphere.cpp  Sphere.h
FilaView/node/: Geometry.cpp  Geometry.h  GltfNode.cpp  GltfNode.h  MeshAssimp.cpp  MeshAssimp.h  MeshNode.cpp  MeshNode.h  ModelNode.cpp  ModelNode.h  Node.cpp  Node.h  RDNode.cpp  RDNode.h  ShapeNode.cpp  ShapeNode.h
FilaView/node/mesh/: Cube.cpp  Cube.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
FilaView/operator/: ManipOperator.cpp  ManipOperator.h  PickOperator.cpp  PickOperator.h  TOperator.cpp  TOperator.h
FilaView/res/: ibl.ktx  skybox.ktx
MdlViewer/: App.axaml  App.axaml.cs  FilaIns.cs  MdlViewer.csproj  Program.cs  ViewLocator.cs  gen.txt
MdlViewer/FilaView/: FilaView-symbols.cpp  FilaView.dll.cs  IWin-symbols.cpp  Operator.cs  PrimitiveOperator.cs  Std.cs
MdlViewer/Properties/: launchSettings.json
MdlViewer/ViewModels/: MainWindowViewModel.cs  ModelListViewModel.cs  ViewModelBase.cs
MdlViewer/Views/: MainWindow.axaml  MainWindow.axaml.cs  ModelListView.axaml  ModelListView.axaml.cs  NativeEmbedView.axaml  NativeEmbedView.axaml.cs  WinApi.cs
ViewForm/: AssemblyInfo.cpp  CMakeLists.txt  FilaViewControl.cpp  FilaViewControl.h
ViewTest/: CMakeLists.txt  main.cpp
